# classifier

./: .gitignore  LICENSE  README.md  README_zh.md  _config.yml  index.html  index.md  params.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: CI.yml
.ropeproject/: globalnames
classifier/: __init__.py  _version.py  classifier.py  config.py  format_specifications.py  main.py  test.py
classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dev/: git_test.py
src/: __init__.py  classifier.py  config.py
tests/: test_classifier.py  test_config.py
