[metadata]
name = classifier 
description = Classify the files in your Downloads folder into suitable destinations
author=Bhrigu Srivastava
author_email=captain.bhrigu@gmail.com
maintainer=Jan-Hendrik Ewers
maintainer_email=dev.jh.ewers@gmail.com
license = MIT 
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/iwishiwasaneagle/classifier/
# Add here related links, for example:
project_urls =
    Source = "https://github.com/iwishiwasaneagle/classifier"


# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

install_requires =
    importlib-metadata; python_version<"3.8"
    loguru==0.6.0
    arrow==1.2.2 


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
test =
    setuptools
    pytest
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    classifier = classifier.classifier:main

[tool:pytest]
addopts =
    --cov jpdmgen --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
per-file-ignores = "**/__init__.py:F401" # Unused import errors